env file made in use

--- a/public/front-theme/service.html
+++ b/public/front-theme/service.html
@@ -49,13 +49,13 @@
             <a href="" class="contact_link2">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +01 1234567890
+                {{env('COMPANY_PHONE')}}
               </span>
             </a>
             <a href="" class="contact_link3">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                demo@gmail.com
+                {{env('COMPANY_EMAIL')}}
               </span>
             </a>
           </div>
@@ -361,13 +361,13 @@
             <a href="" class="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +01 1234567890
+                {{env('COMPANY_PHONE')}}
               </span>
             </a>
             <a href="" class="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                demo@gmail.com
+                {{env('COMPANY_EMAIL')}}
               </span>
             </a>
           </div>
